gcc/testsuite/rust/rustc/ui/typeck/issue-92481.rs
//@check-fail

#![crate_type="lib"]

fn r({) { // { dg-error "" "" { target *-*-* } }
    Ok {
        d..||_=m
    }
}

